--- a/src/main/resources/templates/tasks/add.html
+++ b/src/main/resources/templates/tasks/add.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-  <meta charset="UTF-8" />
-  <title th:text="${title}">missing title</title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
 <h1 th:text="${title}"></h1>
 
-<form method="POST">
-  <input type="text" name="commentName" />
+<nav th:replace="fragments :: navigation"></nav>
+
+<form method="POST" style="max-width:600px;" th:object="${task}" >
+  <div class="form-group">
+    <label th:for="comment">Comment</label>
+    <input class="form-control" th:field="*{comment}" />
+    <span th:errors="*{comment}"></span>
+  </div>
+  <div class="form-group">
+    <label th:for="extraComment">Extra Comment</label>
+    <input class="form-control" th:field="*{extraComment}" />
+    <span th:errors="*{extraComment}"></span>
+  </div>
+  <div class="form-group">
+    <label th:for="event">Event</label>
+    <select name="eventId">
+      <option th:each="eventType : ${eventTypes}"
+              th:text="${eventType.name}"
+              th:value="${eventType.id}"></option>
+    </select>
+  </div>
   <input type="submit" value="Add Comment" />
 </form>
 
